--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,7 @@
     z-index: 1;
     background: #fff;
     transition: .5s;
+    box-shadow: #ccc 0 0 15px 0;
 }
 
 .page-header__container {
@@ -26,7 +27,8 @@
     z-index: 1000;
     border: none;
     background: 0 0;
-    color: #111
+    color: #111;
+    cursor: pointer;
 }
 
 .page-header .main-nav .dropdown__link, .page-header .main-nav__link {
@@ -94,23 +96,28 @@
     color: red
 }
 
-@media screen and (max-width: 1660px) {
+@media screen and (max-width: 1600px) {
     .page-header__container {
-        justify-content: center
-    }
-
-    .page-header__logo {
-        display: none
-    }
-}
-
-@media screen and (max-width: 1500px) {
-    .page-header__container {
-        justify-content: space-between
+        justify-content: space-between;
     }
 
     .page-header__logo, .page-header__menu-button {
         display: block
+    }
+
+    .page-header .main-nav__item .dropdown {
+        display: none !important;
+        position: relative;
+        /*display: block;*/
+        height: 0;
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+        transition: .3s all;
+    }
+
+    .page-header .main-nav__item:hover .dropdown {
+        height: max-content;
     }
 
     .main-nav {
@@ -119,7 +126,7 @@
         position: absolute;
         top: -10px;
         right: -10px;
-        padding: 100px 40px 10px 20px;
+        padding-top: 100px;
         height: 100vh !important;
         z-index: 100;
         transition: .3s transform
@@ -131,10 +138,13 @@
     }
 
     .main-nav__list {
+        width: 100%;
+        background: white;
         display: flex;
         flex-direction: column !important;
         justify-content: flex-start !important;
         align-items: flex-start !important;
+        padding: 0 20px 0 20px !important;
         gap: 25px 0
     }
 }
