--- a/src/css/schedule.css
+++ b/src/css/schedule.css
@@ -1,10 +1,11 @@
 .intro_schedule {
-    padding: 250px 0 200px;
-    background: url(../img/schedule2.webp) 50% 50% no-repeat;
+	padding: 250px 0 200px;
+    background: url(../img/schedule2.webp) 50% 50% no-repeat fixed;
     background-size: cover;
     color: #fff;
     text-align: center
 }
+
 
 .intro__title {
     text-transform: uppercase;
@@ -13,8 +14,104 @@
     font-weight: 400
 }
 
+.schedule__container {
+	position: relative;
+	padding: 100px 50px;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	justify-content: flex-start;
+	gap: 80px 0
+}
+
+.schedule__wrap {
+	display: grid;
+	gap: 50px;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.schedule__title {
+    font-size: 24rem;
+    margin-bottom: 20px;
+}
+
+.schedule__class {
+	font-size: 28rem;
+	text-align: center;
+	border: 1px solid #eee;
+	border-radius: 8px;
+	padding: 10px 0;
+}
+
+.schedule__class:hover,
+.schedule__class_active {
+	background: #eee;
+	cursor: pointer;
+}
+
+.schedule__controls {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 25px	;
+	width: 100%;
+}
+
+/* table styles */
+.table {
+	width: 100%;
+	border: none;
+}
+.table thead th {
+	font-weight: bold;
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	background: #d8d8d8;
+	font-size: 14px;
+}
+.table thead tr th:first-child {
+	border-radius: 8px 0 0 8px;
+}
+.table thead tr th:last-child {
+	border-radius: 0 8px 8px 0;
+}
+.table tbody td {
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	font-size: 14px;
+	vertical-align: top;
+}
+.table tbody tr:nth-child(even){
+	background: #f3f3f3;
+}
+.table tbody tr td:first-child {
+	border-radius: 8px 0 0 8px;
+}
+.table tbody tr td:last-child {
+	border-radius: 0 8px 8px 0;
+}
+
+@media screen and (max-width: 440px) {
+    .schedule__container {
+		padding: 100px 10px;
+	}
+}
+
 @media screen and (max-width: 470px) {
     h1.intro__title {
         font-size: 32rem;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .schedule__controls {
+		grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .schedule__wrap {
+		grid-template-columns: 1fr;
     }
 }
