--- a/src/css/gia.css
+++ b/src/css/gia.css
@@ -16,15 +16,32 @@
 
 .resources__container {
     padding: 100px 15px;
+    display: flex;
+    gap: 75px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+
+.resources__group {
+    width: 100%;
     display: grid;
     grid-gap: 15px;
     grid-template-columns: repeat(4, 1fr);
+    /*padding: 25px;*/
+    /*box-shadow: #eee 0 0 50px 0;*/
 }
+
+.resources__label {
+    grid-column: 1 / -1;
+    font-size: 18rem;
+}
+
 
 .resources__card {
     position: relative;
-    padding: 15px 30px;
     background: #eee;
+    /*border: 1px solid #eee;*/
     border-radius: 8px;
     cursor: pointer;
     display: flex;
@@ -37,18 +54,15 @@
     background: #eaeaea;
 }
 
-.resources__title {
+.resources__link {
+    display: block;
     font-size: 18rem;
     margin: 0;
-    padding: 0;
+    padding: 20px 40px;
     text-align: center;
     flex-grow: 1;
-}
-
-.resources__link {
-    position: absolute;
-    inset: 0;
-    display: block;
+    text-decoration: none;
+    color: #111
 }
 
 .resources__image {
@@ -56,19 +70,19 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .resources__container {
+    .resources__group {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media screen and (max-width: 950px) {
-    .resources__container {
+    .resources__group {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media screen and (max-width: 600px) {
-    .resources__container {
+    .resources__group {
         grid-template-columns: repeat(1, 1fr);
     }
 }
