--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,12 +2,12 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 70px;
+    height: 60px;
     padding: 10px;
-    z-index: 1;
+    z-index: 100;
     background: #fff;
     transition: .5s;
-    box-shadow: #ccc 0 0 15px 0;
+    box-shadow: #77777755 0 0 20px 0;
 }
 
 .page-header__container {
@@ -19,7 +19,8 @@
 }
 
 .page-header__logo {
-    height: 100%
+    height: 40px;
+    width: 40px;
 }
 
 .page-header__menu-button {
