--- a/src/css/schedule.css
+++ b/src/css/schedule.css
@@ -1,17 +1,16 @@
 .intro_schedule {
 	padding: 250px 0 200px;
-    background: url(../img/schedule2.webp) 50% 50% no-repeat fixed;
-    background-size: cover;
-    color: #fff;
-    text-align: center
+	background: url(../img/schedule2.webp) 50% 50% no-repeat fixed;
+	background-size: cover;
+	color: #fff;
+	text-align: center
 }
 
-
 .intro__title {
-    text-transform: uppercase;
-    font-size: 48rem;
-    font-family: Inter;
-    font-weight: 400
+	text-transform: uppercase;
+	font-size: 48rem;
+	font-family: Inter;
+	font-weight: 400
 }
 
 .schedule__container {
@@ -27,16 +26,17 @@
 .schedule__wrap {
 	display: grid;
 	gap: 50px;
-    grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(2, 1fr);
 }
 
 .schedule__title {
-    font-size: 24rem;
-    margin-bottom: 20px;
+	font-size: 24rem;
+	margin-bottom: 20px;
+	display: inline-block;
 }
 
 .schedule__class {
-	font-size: 28rem;
+	font-size: 24rem;
 	text-align: center;
 	border: 1px solid #eee;
 	border-radius: 8px;
@@ -52,8 +52,22 @@
 .schedule__controls {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 25px	;
+	gap: 25px;
 	width: 100%;
+}
+
+.schedule__title_today::after {
+	content: 'Сегодня';
+	font-size: 16rem;
+	color: #444;
+    background: #eee;
+	padding: 2px 10px;
+	border-radius: 5px;
+    grid-column: 1 / -1;
+}
+
+.schedule__title_today + .table .schedule__now {
+	background: rgba(255, 0, 0, 0.11) !important;
 }
 
 /* table styles */
@@ -93,25 +107,32 @@
 }
 
 @media screen and (max-width: 440px) {
-    .schedule__container {
+	.schedule__container {
 		padding: 100px 10px;
 	}
 }
 
 @media screen and (max-width: 470px) {
-    h1.intro__title {
-        font-size: 32rem;
-    }
+	h1.intro__title {
+		font-size: 32rem;
+	}
 }
 
 @media screen and (max-width: 680px) {
-    .schedule__controls {
-		grid-template-columns: 1fr;
-    }
+	.schedule__controls {
+		gap: 0;
+		border: 1px solid #fff;
+		border-radius: 8px;
+		overflow: hidden;
+	}
+	.schedule__class {
+		border: none;
+		font-size: 22rem;
+	}
 }
 
 @media screen and (max-width: 1000px) {
-    .schedule__wrap {
+	.schedule__wrap {
 		grid-template-columns: 1fr;
-    }
+	}
 }
